<resources>
    <string name="app_name" translatable="false">Expense Manager Mobile Application</string>
    <string name="name">Expense Manager</string>
    <string name="required">Required</string>
    <!--- main_Activity-->
    <string name="start" translatable="false">START</string>
    <string name="add_card" translatable="false">Add Card</string>
    <string name="add_cash" translatable="false">Add Wallet</string>
    <string name="help" translatable="false">Help</string>
    <!---add_card_Activity-->
    <string name="title_new_card" translatable="false">Create new card</string>
    <string name="name_of_bank_or_card" translatable="false">Name of bank/card</string>
    <string name="amount_of_card" translatable="false">Amount</string>
    <string name="create_card_btn">Create</string>
    <string name="currency_title">Click to select currency</string>
    <string-array name="Currencies">
        <item> </item>
        <item>Euro €</item>
        <item>US dollar $</item>
        <item>Canadian dollar $</item>
        <item>Japanese yen \uFFE5</item>
        <item>Chinese renminbi \uFFE5</item>
    </string-array>
    <!---alert_dialog-->
    <string name="create_another_card">Create another card</string>
    <string name="create_a_wallet">Create a wallet</string>
    <!---add_card_Activity & add_cash_Activity-->
    <string name="choose_action">Choose action</string>
    <string name="continue_with_app">Continue with app</string>
    <string name="infoaddcardbtntlt">Add card action info</string>
    <string name="infoaddcardbtndesc">In this activity you can create a card or bank. \n
        It is recommended not to give the same name as other items, otherwise you can add a number next to the name for your convenience.\n
        (The name can be up to 10 characters) \n
        <b>ATTENTION</b> You must fill all the fields to create a card!</string>
    <string name="infoaddcashbtntlt">Add wallet action info</string>
    <string name="infoaddcashbtndesc">In this activity you can create a wallet. \n
        It is recommended not to give the same name as other items, otherwise you can add a number next to the name for your convenience.\n
        (The name can be up to 10 characters) \n
        <b>ATTENTION</b> You must fill all the fields to create a wallet!</string>
    <!--- add_cash_Activity-->
    <string name="title_new_wallet">Create wallet for cash</string>
    <string name="name_of_wallet">Name of wallet</string>
    <string name="amount_of_wallet">Amount</string>
    <string name="create_wallet_btn">Create</string>
    <!---alert_dialog-->
    <string name="create_another_wallet">Create another wallet</string>
    <string name="create_a_card">Create a card</string>
    <!---help_Activity-->
    <string name="helptitle">Help</string>
    <string name="helptxt">The Expense Manager app is an application aimed at helping the user manage their finances. \n
        -By pressing the <b>"Add card"</b> button, you are given the possibility to add a bank card and the amount you have available on it. \n
        -By pressing the <b>"Add cash"</b> button, you can add a virtual wallet and name it and the amount you have available.</string>
    <!---First-Activity-->
    <string name="hellotxt">Hello %s!</string>
    <!---First-Page-->
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="addcard">Add new card/bank</string>
    <string name="addwallet">Add new wallet</string>
    <string name="deletedata">Delete data</string>
    <string name="infofirstpagetlt">App info</string>
    <string name="infofirstpagedesc">In this activity you can create a wallet. \n
        In this Activity you can view the data you have created.\n
        To see in detail click on the one you are interested in. \n
        To manipulate them, you need to enter them. \n
        On this page you can create new objects. \n
        You can change both the image and the name. \n
        By clicking on the EN button you can change the language.\n
        By tapping on the gear button you can find some additional settings.</string>
    <!---layout_for_alert_dialog_newname-->
    <string name="newname">Enter a name</string>
    <string name="okbtn">OK</string>
    <string name="cancelbtn">Cancel</string>
    <!---Add-Btn-Activity-->
    <string name="addbtntitle">Add money in:</string>
    <string name="nameofdata2">%s</string>
    <string name="inamount">%s</string>
    <string name="curamount">%s</string>
    <string name="infoaddbtntlt">Add action info</string>
    <string name="infoaddbtndesc">In this activity you can add a certain amount of money. There are two possibilities: \n
                                    1)<b>Qr</b>: You can scan a receipt and the application will add the amount. \n
                                    2)<b>Add manually</b>:You can manually add the amount you want and it will be added. \n
        <b>ATTENTION</b> QR only works with Internet access and greek receipts!</string>
    <!---Substraction-Btn-Activity-->
    <string name="substractionbtntitle">Substract money from:</string>
    <string name="nameofdata">%s</string>
    <string name="infosubbtntlt">Subtraction action info</string>
    <string name="infosubbtndesc">In this activity you can subtract a certain amount of money. There are two possibilities: \n
                                    1)<b>Qr</b>: You can scan a receipt and the application will subtract the amount. \n
                                    2)<b>Subtract manually</b>:You can manually subtract the amount you want and it will be subtracted. \n
        <b>ATTENTION</b> QR only works with Internet access and greek receipts!</string>
    <!---Settings-Activity-->
    <string name="userdatattl">User Data</string>
    <string name="addcarddesc">You can add a new card and choose the currency! </string>
    <string name="addwalletdesc">You can add a new wallet and choose the currency! </string>
    <string name="deleteall">Delete all data</string>
    <string name="deletealldesc">Delete all elements you have created!</string>
    <string name="deleteone">Delete one element</string>
    <string name="deleteonedesc">Delete an item !</string>
    <string name="energies">Energies</string>
    <string name="addmoney">Add money</string>
    <string name="addmoneydesc">Add money to an item!</string>
    <string name="submoney">Subtract money</string>
    <string name="submoneydesc">Subtract money to an item!</string>
    <string name="transfermoney">Transfer money</string>
    <string name="transfermoneydesc">Select from &amp; to options to transfer money!</string>
    <string name="about">About Expense Manager</string>
    <string name="rate">Rate Expense Manager</string>
    <string name="ratedesc">It would help to improve!</string>
    <string name="contact">Contact me</string>
    <string name="contactdesc">If there is any problem, you can send an email!</string>
    <string name="sourcecode">Source Code</string>
    <string name="sourcecodedesc">You can see the source code on github!</string>
    <string name="futureplans">Future goals</string>
    <string name="futureplansdesc">You can see future implementations that will exist!</string>
    <!---layout_for_alert_dialog_add_manual_amount-->
    <string name="enteranamount">Enter an amount</string>
    <string name="availableamount">The available amount: %s</string>
    <string name="currency">%s</string>
    <!---Data-Activity-->
    <string name="transfer">Transfer</string>
    <string name="select_destination_placeholder">Select destination</string>
    <string name="english">EN</string>
    <string name="greek">GR</string>
    <string name="addamount">Add money</string>
    <string name="subtractamount">Subtract money</string>
    <string name="amount">Amount:</string>
    <string name="currencydata">Currency:</string>
    <!---Transfer-Activity-->
    <string name="transferfrom">Transfer money from:</string>
    <string name="from">%s</string>
    <string name="to">To: </string>
    <string name="select">Click to select</string>
    <string name="destination">Select destination</string>
    <string name="clicktoselect">Click to select destination</string>
    <string name="amountintrans">%s</string>
    <string name="currencyamount">%s</string>
    <string name="infotransferbtntlt">Transfer action info</string>
    <string name="infotransferbtndesc">In this activity you can transfer a certain amount of money. There are two possibilities: \n
                                    1)<b>Qr</b>: You can scan a receipt and the application will transfer the amount in the destination you specified. \n
                                    2)<b>Transfer manually</b>:You can manually give the amount and it will be tranfered. \n
        <b>ATTENTION</b> QR only works with Internet access and greek receipts!</string>
    <!---layout_for_delete-->
    <string name="delete">Delete</string>
    <string name="areyousure">Αre you sure you want to delete \"%s\" ?</string>
    <!---layout_for_delete_all_data-->
    <string name="deletealldata">Are you sure you want to delete all data?</string>
    <!---layout_for_delete_one_data-->
    <string name="deleteonedata2">Select which one to delete</string>
    <!---futuresplans-->
    <string name="cexchange">Currency Exchange</string>
    <string name="cexchangedesc">Currency conversion will be allowed based on the rates they have at that time!</string>
    <string name="history">Transaction History</string>
    <string name="historydesc">You will be able to see the last transactions you made!</string>
    <string name="calculator">Calculator</string>
    <string name="calculatordesc">Ability to display a calculator within the application!</string>
    <string name="statistics">Statistics</string>
    <string name="statisticsdesc">Statistics about your finances!</string>
    <string name="ios">IOS implementation</string>
    <string name="iosdesc">It will soon be implemented for ios devices!</string>
    <string name="todolist">TODO list</string>
    <string name="todolistdesc">A list like a notebook!</string>
    <!---delete-one-data-->
</resources>