<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bck"
    tools:context=".activities.AddCashActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/title_new_wallet"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@id/nameofwallet"
        app:layout_constraintLeft_toLeftOf="@id/nameofwallet"
        app:layout_constraintRight_toRightOf="@id/nameofwallet" />

    <Button
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_wallet_btn"
        android:layout_marginTop="80dp"
        android:layout_marginStart="260dp"
        android:background="@drawable/createbtns"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/amounttxtplc"
        app:layout_constraintLeft_toLeftOf="@+id/amounttxtplc"/>

    <EditText
        android:id="@+id/nameofwallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_wallet"
        android:textColor="@color/white"
        android:textColorHint="@color/backcolorintxtplc"
        android:layout_marginBottom="100dp"
        android:background="@drawable/roundbtn"
        android:padding="6dp"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/amounttxtplc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbtn"
        android:hint="@string/amount_of_wallet"
        android:textColor="@color/white"
        android:textColorHint="@color/backcolorintxtplc"
        android:layout_marginTop="100dp"
        android:textSize="22sp"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/nameofwallet"
        app:layout_constraintEnd_toStartOf="@id/nameofwallet"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/slccur"
        android:layout_marginTop="100dp"
        android:layout_marginStart="120dp"
        android:padding="6dp"
        android:background="@drawable/roundbtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/nameofwallet"
        app:layout_constraintTop_toBottomOf="@id/nameofwallet">

        <TextView
            android:id="@+id/selectcur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_title"
            android:textSize="22sp"
            android:textColor="@color/white"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/white"
            android:textSize="22sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>