<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#243CE8"
    app:cardCornerRadius="16dp"
    >

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >

        <TextView
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/choose_action"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/create_another_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbtn"
            android:padding="6dp"
            android:layout_marginBottom="100dp"
            android:text="@string/create_another_card"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/addcashbtn"
            app:layout_constraintLeft_toLeftOf="@id/addcashbtn"
            app:layout_constraintRight_toRightOf="@id/addcashbtn"/>

        <Button
            android:id="@+id/create_a_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundbtn"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/create_a_wallet"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/continue_with_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/roundbtn"
            android:padding="6dp"
            android:text="@string/continue_with_app"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@id/addcashbtn"
            app:layout_constraintRight_toRightOf="@id/addcashbtn"
            app:layout_constraintTop_toBottomOf="@id/addcashbtn" />
    </LinearLayout>


</androidx.cardview.widget.CardView>