<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#243CE8"
    app:cardCornerRadius="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/deleteonespinner"
            android:gravity="center"
            tools:context=".TransferActivity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteonedata2"
                android:textColor="@color/white"
                android:background="@drawable/roundbtn"
                android:padding="10dp"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/selecttodelete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:visibility="invisible"
                android:prompt="@string/select_destination_placeholder"
                android:textColor="@color/white"
                tools:listitem="@layout/spinner_bankwallet_data"
                android:theme="@style/SpinnerDialogTransfer"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            >
            <Button
                android:id="@+id/delete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_button"
                android:text="@string/delete"
                android:textColor="@color/white"/>

            <View
                android:id="@+id/space"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbtn"
                android:text="@string/cancelbtn"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>