<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#243CE8"
    app:cardCornerRadius="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/deletealldata"
            android:layout_margin="14dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            >
            <Button
                android:id="@+id/delete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_button"
                android:text="@string/delete"
                android:textColor="@color/white"/>

            <View
                android:id="@+id/space"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbtn"
                android:text="@string/cancelbtn"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>