<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#243CE8"
    app:cardCornerRadius="16dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ttlnewname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >

        <EditText
            android:id="@+id/entername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundbtn"
            android:padding="10dp"
            android:layout_marginBottom="14dp"
            android:hint="@string/newname"
            android:maxLength="10"
            android:textColor="@color/white"
            android:textColorHint="@color/backcolorintxtplc"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"

            >

            <Button
                android:id="@+id/okbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbtn"
                android:text="@string/okbtn"
                android:textColor="@color/white"/>

            <View
                android:id="@+id/space"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/cancelbtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundbtn"
                android:text="@string/cancelbtn"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>